# STELA

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  notes.txt
CLI/: CMakeLists.txt  main.cpp
CLI/src/: main.cpp
Examples/: classes.stela  closures.stela  functions.stela  helloworld.stela  polymorphism.stela  primatives.stela  structures.stela  this is not swift.stela
Public/: ast.hpp  create ast.hpp  error.hpp  lexer.hpp  lexical analysis.hpp  location.hpp  log.hpp  syntax analysis.hpp  token.hpp
STELA/: lexer.cpp  lexer.hpp
STELA.xcodeproj/: project.pbxproj
STELA.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
STELA.xcodeproj/xcshareddata/xcschemes/: Compiler.xcscheme  Language.xcscheme  Test.xcscheme
STELA.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcschemes/: STELA.xcscheme  Test.xcscheme  xcschememanagement.plist
Source/: create ast.cpp  error.cpp  lexer.cpp  lexical analysis.cpp  log output.cpp  log output.hpp  log.cpp  number literal.hpp  parse tokens.cpp  parse tokens.hpp  syntax analysis.cpp
Test/: lexer.cpp  lexer.hpp  log counter.cpp  log counter.hpp  macros.hpp  main.cpp  syntax.cpp  syntax.hpp
cmake/in/: googlebenchmark.in  googletest.in
include/STELA/: ast.hpp  binding.hpp  c standard library.hpp  code generation.hpp  console format.hpp  format.hpp  html format.hpp  lexical analysis.hpp  llvm.hpp  location.hpp  log.hpp  meta.hpp  modules.hpp  native functions.hpp  native types.hpp  number.hpp  pass traits.hpp  plain format.hpp  ref count.hpp  reflect decl.hpp  reflect type.hpp  reflection state.hpp  reflection.hpp  reflector.hpp  retain ptr.hpp  semantic analysis.hpp  symbols.hpp  syntax analysis.hpp  token.hpp  wrap function.hpp
src/: assert down cast.hpp  ast.cpp  builtin code.cpp  builtin code.hpp  builtin symbols.cpp  builtin symbols.hpp  c standard library.cpp  categories.cpp  categories.hpp  check missing return.cpp  check scopes.cpp  check scopes.hpp  clone ast.cpp  clone ast.hpp  clone type.cpp  clone type.hpp  code generation.cpp  compare ast.cpp  compare ast.hpp  compare exprs.cpp  compare exprs.hpp  compare params args.cpp  compare params args.hpp  compare types.cpp  compare types.hpp  console format.cpp  context stack.cpp  context stack.hpp  context.hpp  expr lookup.cpp  expr lookup.hpp  expr stack.cpp  expr stack.hpp  expression builder.cpp  expression builder.hpp  format.cpp  func instantiations.cpp  func instantiations.hpp  function builder.cpp  function builder.hpp  (+100 more)
src/CodeGen/: binding.cpp  builtin code.hpp  categories.cpp  categories.hpp  code generation.cpp  compare exprs.cpp  compare exprs.hpp  func instantiations.cpp  func instantiations.hpp  function builder.cpp  function builder.hpp  gen context.hpp  gen helpers.cpp  gen helpers.hpp  gen types.cpp  gen types.hpp  generate builtin.cpp  generate class.cpp  generate closure.cpp  generate closure.hpp  generate decl.cpp  generate decl.hpp  generate expr.cpp  generate expr.hpp  generate stat.cpp  generate stat.hpp  generate struct.cpp  generate type.cpp  generate type.hpp  inst data.hpp  lifetime exprs.cpp  lifetime exprs.hpp  llvm.cpp  lower expressions.cpp  lower expressions.hpp  optimize module.cpp  reflection.cpp
src/Format/: console format.cpp  format.cpp  plain format.cpp
src/Lex/: lexical analysis.cpp  number literal.cpp  number literal.hpp
src/Log/: log output.cpp  log.cpp
src/Semantic/: ast.cpp  builtin symbols.cpp  c standard library.cpp  check missing return.hpp  check scopes.hpp  compare params args.cpp  compare types.cpp  context.hpp  expr lookup.cpp  expr lookup.hpp  expr stack.hpp  infer type.cpp  modules.cpp  operator name.cpp  operator name.hpp  scope insert.cpp  scope lookup.cpp  scope manager.cpp  scope traverse.hpp  semantic analysis.cpp  symbol desc.cpp  traverse.cpp  traverse.hpp
src/Syntax/: context stack.cpp  parse asgn.cpp  parse decl.hpp  parse expr.cpp  parse func.cpp  parse func.hpp  parse litr.cpp  parse litr.hpp  parse tokens.cpp  parse tokens.hpp  parse type.cpp  parse type.hpp  syntax analysis.cpp
src/Utils/: algorithms.hpp  console color.hpp  iterator range.hpp
test/: CMakeLists.txt
test/src/: compiler benchmark.cpp  format.cpp  format.hpp  generation.cpp  generation.hpp  language benchmark.cpp  lexer.cpp  lexer.hpp  log counter.cpp  log counter.hpp  macros.hpp  main.cpp  semantics.cpp  semantics.hpp  syntax.cpp  syntax.hpp
